[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/servidor.gd" type="Script" id=1]
[ext_resource path="res://recursos/saco_dinero.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemigo/enemigos.tscn" type="PackedScene" id=3]
[ext_resource path="res://personaje/Personaje_gato/KinematicBody2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu_principal/opciones.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/fruta.gd" type="Script" id=6]
[ext_resource path="res://scripts/ladrillo_rompe.gd" type="Script" id=7]
[ext_resource path="res://TILESET/new_tileset.tres" type="TileSet" id=8]
[ext_resource path="res://recursos/tiles/todoslostilesmitad.png" type="Texture" id=9]
[ext_resource path="res://GUI_PUNTOS/puntajes.tscn" type="PackedScene" id=10]
[ext_resource path="res://escenas/niveles/fondocueva.tscn" type="PackedScene" id=11]
[ext_resource path="res://recursos/todoslostilesmitad.png" type="Texture" id=12]
[ext_resource path="res://todoslostilesmitad.png" type="Texture" id=13]
[ext_resource path="res://Piedra_fuego.tscn" type="PackedScene" id=14]
[ext_resource path="res://recursos/plataforma mobil 1.tscn" type="PackedScene" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 10.2042

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.3652, 9.63937 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 469, 0, 469, 330, 0, 330 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 319, 0, 319, 285, 0, 285 )

[sub_resource type="TileSet" id=6]
0/name = "todoslostilesmitad.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -8, 814, 469, 330 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 151, 160 )
0/autotile/spacing = 6
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "todoslostilesmitad.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 498, 843, 319, 285 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 160, 150 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 5 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="nivel1" type="Node2D"]
script = ExtResource( 1 )

[node name="cueva-fondo" parent="." instance=ExtResource( 11 )]
position = Vector2( -0.457764, -3.96761 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 4 )]
position = Vector2( -9.8577, 266.286 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 109, 50 )
cell_quadrant_size = 10
format = 1
tile_data = PoolIntArray( -2031599, 0, 0, -1900546, 0, 0, -1966063, 0, 0, -1835010, 0, 0, -1900527, 0, 0, -1769474, 0, 0, -1834991, 0, 0, -1703938, 0, 0, -1769458, 0, 0, -1769457, 0, 0, -1769456, 0, 0, -1769455, 0, 0, -1638402, 0, 0, -1703919, 0, 0, -1572866, 0, 0, -1638383, 0, 0, -1507330, 0, 0, -1572855, 0, 0, -1572853, 0, 0, -1572851, 0, 0, -1572847, 0, 0, -1441794, 0, 0, -1507321, 0, 0, -1507311, 0, 0, -1376258, 0, 0, -1441787, 0, 0, -1441775, 0, 0, -1310722, 0, 0, -1376239, 0, 0, -1245186, 0, 0, -1310703, 0, 0, -1179650, 0, 0, -1179649, 0, 0, -1245184, 0, 0, -1245183, 0, 0, -1245182, 0, 0, -1245181, 0, 0, -1245167, 0, 0, -1114114, 0, 0, -1179631, 0, 0, -1048578, 0, 0, -1114096, 0, 0, -1114095, 0, 0, -983042, 0, 0, -1048561, 0, 0, -1048560, 0, 0, -1048559, 0, 0, -917506, 0, 0, -983026, 0, 0, -983025, 0, 0, -983024, 0, 0, -983023, 0, 0, -851970, 0, 0, -917498, 0, 0, -917497, 0, 0, -917495, 0, 0, -917494, 0, 0, -917487, 0, 0, -786434, 0, 0, -851967, 0, 0, -851966, 0, 0, -851964, 0, 0, -851963, 0, 0, -851957, 0, 0, -851951, 0, 0, -720898, 0, 0, -786421, 0, 0, -786415, 0, 0, -655362, 0, 0, -720884, 0, 0, -720879, 0, 0, -589826, 0, 0, -655343, 0, 0, -524290, 0, 0, -524289, 0, 0, -589807, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524271, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458735, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393199, 0, 0, -262146, 0, 0, -327667, 0, 0, -327666, 0, 0, -327664, 0, 0, -327663, 0, 0, -196610, 0, 0, -262127, 0, 0, -131074, 0, 0, -196591, 0, 0, -65538, 0, 0, -131055, 0, 0, -2, 0, 0, -65532, 0, 0, -65528, 0, 0, -65519, 0, 0, 65534, 0, 0, 5, 0, 0, 7, 0, 0, 17, 0, 0, 131070, 0, 0, 65553, 0, 0, 196606, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 262142, 0, 0, 196625, 0, 0, 327678, 0, 0, 262153, 0, 0, 262161, 0, 0, 393214, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327688, 0, 0, 327690, 0, 0, 327697, 0, 0, 458750, 0, 0, 393223, 0, 0, 393227, 0, 0, 393233, 0, 0, 524286, 0, 0, 458760, 0, 0, 458762, 0, 0, 458769, 0, 0, 589822, 0, 0, 524297, 0, 0, 524305, 0, 0, 655358, 0, 0, 589841, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 786430, 0, 0, 720913, 0, 0, 851966, 0, 0, 786449, 0, 0, 917502, 0, 0, 851985, 0, 0, 983038, 0, 0, 917509, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 1048574, 0, 0, 983044, 0, 0, 983057, 0, 0, 1114110, 0, 0, 1048579, 0, 0, 1048593, 0, 0, 1179646, 0, 0, 1114129, 0, 0, 1245182, 0, 0, 1245183, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1310718, 0, 0, 1310719, 0, 0, 1245184, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1376254, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1441790, 0, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1507326, 0, 0, 1507327, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0 )

[node name="MovingPlatform" parent="TileMap" instance=ExtResource( 15 )]
position = Vector2( 1221.02, -234.572 )
move_to = Vector2( -1, 0 )

[node name="frutas" type="Node" parent="."]

[node name="fruta3" type="Area2D" parent="frutas"]
position = Vector2( -217.622, -117.731 )
gravity_point = true
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="sandia" type="Sprite" parent="frutas/fruta3"]
position = Vector2( 727.102, 479.725 )
scale = Vector2( 0.229827, 0.229827 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 263, 1179, 95, 111 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="frutas/fruta3"]
position = Vector2( 726.486, 481.488 )
shape = SubResource( 1 )
one_way_collision = true

[node name="fruta4" type="Area2D" parent="frutas"]
position = Vector2( -641.648, -373.903 )
gravity_point = true
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="sandia" type="Sprite" parent="frutas/fruta4"]
position = Vector2( 727.102, 479.725 )
scale = Vector2( 0.229827, 0.229827 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 263, 1179, 95, 111 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="frutas/fruta4"]
position = Vector2( 726.486, 481.488 )
shape = SubResource( 1 )
one_way_collision = true

[node name="fruta5" type="Area2D" parent="frutas"]
position = Vector2( -534.499, -371.522 )
gravity_point = true
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="sandia" type="Sprite" parent="frutas/fruta5"]
position = Vector2( 727.102, 479.725 )
scale = Vector2( 0.229827, 0.229827 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 263, 1179, 95, 111 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="frutas/fruta5"]
position = Vector2( 726.486, 481.488 )
shape = SubResource( 1 )
one_way_collision = true

[node name="RigidBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 629.456, 308.166 )

[node name="RigidBody2D2" parent="." instance=ExtResource( 3 )]
position = Vector2( 80.8873, 208.307 )

[node name="RigidBody2D3" parent="." instance=ExtResource( 3 )]
position = Vector2( 848.089, 209.781 )

[node name="RigidBody2D4" parent="." instance=ExtResource( 3 )]
position = Vector2( 845.566, 13.0113 )

[node name="ladrillo_rompe4" type="RigidBody2D" parent="."]
position = Vector2( 351.364, 42.9966 )
mass = 0.00102041
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="ladrillo_rompe4"]
position = Vector2( 2.69135, -0.863037 )
scale = Vector2( 0.494394, 0.494394 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladrillo_rompe4"]
position = Vector2( 2.2049, 0.944946 )
shape = SubResource( 3 )

[node name="ladrillo_rompe3" type="RigidBody2D" parent="."]
position = Vector2( 462.061, -339.944 )
mass = 0.00102041
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ladrillo_rompe3"]
position = Vector2( 1.35579, -0.0998635 )
scale = Vector2( 0.47913, 0.479131 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladrillo_rompe3"]
position = Vector2( 0.827764, 1.94922 )
shape = SubResource( 3 )

[node name="ladrillo_rompe6" type="RigidBody2D" parent="."]
visible = false
position = Vector2( 189.822, -314.545 )
mass = 0.00102041
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="ladrillo_rompe6"]
position = Vector2( 1.35579, -0.0998635 )
scale = Vector2( 0.47913, 0.479131 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladrillo_rompe6"]
position = Vector2( 0.827764, 1.94922 )
shape = SubResource( 3 )

[node name="trampolin" parent="." instance=ExtResource( 5 )]

[node name="trampolin3" parent="trampolin" instance=ExtResource( 5 )]

[node name="trampolin4" parent="trampolin" instance=ExtResource( 5 )]

[node name="objetos" type="TileMap" parent="."]
position = Vector2( 0, 20 )
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 6 )
cell_size = Vector2( 130, 120 )
cell_quadrant_size = 20
format = 1

[node name="CanvasLayer" parent="." instance=ExtResource( 10 )]

[node name="saco_dinero3" parent="." instance=ExtResource( 2 )]
position = Vector2( 785.528, 504.565 )

[node name="saco_dinero5" parent="." instance=ExtResource( 2 )]
position = Vector2( 135.649, 101.535 )

[node name="saco_dinero4" parent="." instance=ExtResource( 2 )]
position = Vector2( 187.62, 380.208 )

[node name="trampolin2" parent="." instance=ExtResource( 14 )]
position = Vector2( 515.916, 532.601 )
[connection signal="body_entered" from="frutas/fruta3" to="frutas/fruta3" method="_on_fruta_body_entered"]
[connection signal="body_entered" from="frutas/fruta3" to="KinematicBody2D" method="_on_fruta_body_entered"]
[connection signal="body_entered" from="frutas/fruta3" to="." method="_on_fruta_body_entered"]
[connection signal="body_entered" from="frutas/fruta4" to="frutas/fruta4" method="_on_fruta_body_entered"]
[connection signal="body_entered" from="frutas/fruta4" to="KinematicBody2D" method="_on_fruta_body_entered"]
[connection signal="body_entered" from="frutas/fruta4" to="." method="_on_fruta_body_entered"]
[connection signal="body_entered" from="frutas/fruta5" to="frutas/fruta5" method="_on_fruta_body_entered"]
[connection signal="body_entered" from="frutas/fruta5" to="KinematicBody2D" method="_on_fruta_body_entered"]
[connection signal="body_entered" from="frutas/fruta5" to="." method="_on_fruta_body_entered"]
[connection signal="body_entered" from="RigidBody2D" to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_entered" from="RigidBody2D2" to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_entered" from="RigidBody2D3" to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_entered" from="RigidBody2D4" to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_entered" from="ladrillo_rompe4" to="ladrillo_rompe4" method="_on_ladrillo_rompe_body_entered"]
[connection signal="body_entered" from="ladrillo_rompe3" to="ladrillo_rompe3" method="_on_ladrillo_rompe_body_entered"]
[connection signal="body_entered" from="ladrillo_rompe6" to="ladrillo_rompe6" method="_on_ladrillo_rompe_body_entered"]
[connection signal="body_entered" from="saco_dinero3" to="saco_dinero3" method="_on_saco_dinero_body_entered"]
[connection signal="body_entered" from="saco_dinero3" to="KinematicBody2D" method="_on_saco_dinero_body_entered"]
[connection signal="body_entered" from="saco_dinero3" to="." method="_on_saco_dinero_body_entered"]
[connection signal="body_entered" from="saco_dinero5" to="KinematicBody2D" method="_on_saco_dinero_body_entered"]
[connection signal="body_entered" from="saco_dinero5" to="." method="_on_saco_dinero_body_entered"]
[connection signal="body_entered" from="saco_dinero5" to="saco_dinero5" method="_on_saco_dinero_body_entered"]
[connection signal="body_entered" from="saco_dinero4" to="KinematicBody2D" method="_on_saco_dinero_body_entered"]
[connection signal="body_entered" from="saco_dinero4" to="." method="_on_saco_dinero_body_entered"]
[connection signal="body_entered" from="saco_dinero4" to="saco_dinero4" method="_on_saco_dinero_body_entered"]
[connection signal="body_entered" from="trampolin2" to="KinematicBody2D" method="_on_trampolin2_body_entered"]
